Add file listing header and latest commit date feature
- Introduced a header for the file list in index.html to display file names and last updated dates.
- Implemented a new API function to fetch the latest commit date for files and directories.
- Updated state management in main.js to store and display commit dates alongside file listings.
- Enhanced UI rendering in ui.js to show commit dates in the file list.
- Made various CSS adjustments for improved styling and layout of the file browser.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         <div class="file-list-wrap">
           <div id="loading" class="loading hidden">Loading…</div>
           <div id="error-message" class="error-message hidden"></div>
+          <div class="file-list-header">
+            <span>Name</span>
+            <span>Updated</span>
+            <span></span>
+          </div>
           <ul class="file-list" id="file-list"></ul>
         </div>
       </aside>
